# CDMATH

./: .gitignore  CMakeLists.txt  Convergence_Poisson_FV5_SQUARE_brickwall.ipynb  README.md  cdmath.spec  env_CDMATH.sh
examples/PoissonCurvedSurfaceEF_ns/: CMakeLists.txt  FiniteElementsOnCurvedSurface.py
linearsolver/src/: CMakeLists.txt  LinearSolver.cxx  SparseMatrixPetsc.cxx
postprocessing/: CMakeLists.txt  MED_routines.py  PV_routines.py  VTK_routines.py  VTU_routines.py  analyticalFunction_discretizer.py  resultsBase.py
pre_requis/: CMakeLists.txt
pre_requis/MEDCoupling/: MEDCouplingUMesh_intersection.cxx  MEDCoupling_version.h  MED_version.h  med.h  medC_win_dll.h  med_proto.h  medequivalence.h  medfamily.h  medfield.h  medfile.h  medfilter.h  medinterp.h  medlibrary.h  medlink.h  medlocalization.h  medmesh.h  medparameter.h  medprofile.h  medsubdomain.h
pre_requis/MEDCoupling_Swig/: CMakeLists.txt  MEDCouplingDataArrayTypemaps.i
pre_requis/MEDFile/: CMakeLists.txt  ChangeLog  configure  configure.ac
pre_requis/MEDFile/config/: ac_check_sizeof_fortran.m4  med_check_f77.m4  med_check_f90.m4  med_check_hdf5.m4  med_check_mesgerr.m4  med_check_typeof_medint.m4  med_disable_api23.m4  med_enable_check23.m4  med_enable_pmed.m4  med_summary.m4  package.m4
pre_requis/MEDFile/include/: H5public_extract.h.in  MEDerreur.hxx  MEDfieldChecked.hxx  MEDfileVersion.hxx  MEDgetGeometryTypeFromName.hxx  MEDmodeAcces.hxx  MEDversionedApi3.hxx  med.h.in  med_err.h  med_exit_if.h  med_hdfi.h  med_misc.h  med_outils.h  med_utils.h.in  med_vargs.h  med_versioned.h  med_versioned_hdfi.h  med_versioned_proto_en.h
pre_requis/MEDFile/python/: CMakeLists.txt  medenum_int_wrap.cc  medenum_long_wrap.cc  medenumtest_int_wrap.cc  medenumtest_long_wrap.cc  medequivalence_int_wrap.cc  medequivalence_long_wrap.cc  medfamily_int_wrap.cc  medfamily_long_wrap.cc  medfield_int_wrap.cc  medfield_long_wrap.cc  medfile_int_wrap.cc  medfile_long_wrap.cc  medfilter_int_wrap.cc  medfilter_long_wrap.cc  medinterp_int_wrap.cc  medinterp_long_wrap.cc  medlibrary_int_wrap.cc  medlibrary_long_wrap.cc  medlink_int_wrap.cc  medlink_long_wrap.cc  medlocalization_int_wrap.cc  medlocalization_long_wrap.cc  medmesh_int_wrap.cc  medmesh_long_wrap.cc  medparameter_int_wrap.cc  medparameter_long_wrap.cc  medprofile_int_wrap.cc  medprofile_long_wrap.cc  medsubdomain_int_wrap.cc  medsubdomain_long_wrap.cc
pre_requis/MEDFile/src/: CMakeLists.txt  MEDiterators.c  Makefile.am  Makefile.in
pre_requis/MEDIncludes/: med.h  med_parameter.hf  med_utils.h
pre_requis/MEDLoader/: CMakeLists.txt  MEDFileMeshLL.cxx
pre_requis/MEDLoader/Swig/: CMakeLists.txt
pre_requis/PETSc/: CMakeLists.txt
tests/: CMakeLists.txt  MainTests.cxx
tests/cdmath/: CMakeLists.txt  LinearSolverTests.cxx  MeshTests.cxx  SparseMatrixPetscTests.cxx  SparseMatrixTests.cxx
tests/doc/: BibliographyFV5.md  CodeFV5PoissonProblem.md  Convergence_Poisson_FV5_SQUARE.html  Convergence_Poisson_FV5_SQUARE.ipynb  DescriptionFV5PoissonProblem.md  Notebooks.md  PoissonProblemOnSquare.md
tests/doc/.ipynb_checkpoints/: Convergence_Poisson_FV5_SQUARE-checkpoint.ipynb
tests/doc/1DBurgersEquation/: 1DBurgersEquation.py  BurgersEquation1D.ipynb
tests/doc/1DBurgersEquation_RarefactionWave/: 1DBurgersEquation_rarefaction_wave.py
tests/doc/1DHeatEquation/: HeatEquation1DExplicit.py  HeatEquation1D_RegularGrid.ipynb
tests/doc/1DWaveSystemRiemannProblem/: WaveSystem1DRiemannProblem.py
tests/doc/2DDiffusionVF/: Convergence_Diffusion_FV5_SQUARE.ipynb
tests/doc/2DPoissonEF/: Bibliography.md  BibliographyFE.md  (+2 more)
tests/examples/: CMakeLists.txt
tests/ressources/: CMakeLists.txt  buid_med_meshes_from_typ.py  diskWithTriangles.med  meshCube.med  meshSphere.med  meshSquare.med  squareWithBrickWall.med  squareWithDeformedQuadrangles.med  squareWithHexagons.med  squareWithLocRefSquares.med  squareWithSquares.med
tests/swig/: CMakeLists.txt  linearSolverTests.py  mainTests.py  test_PV_routines.py  test_VTK_routines.py
tests/validation/: CMakeLists.txt  test_validation2DEF.py  test_validation2DPoissonVF_checkerboard.py  test_validation2DVF_checkerboard.py  test_validation2DVF_ns.py  test_validation2DVF_ns_loc_ref.py  test_validation2DVF_s.py  test_validation2DWaveSystemPStagSquares.py  test_validation2DWaveSystemPStagTriangles.py  test_validation2DWaveSystemSquaresFV.py  test_validation2DWaveSystemTrianglesFV.py  test_validation2DWaveSystemUpwindSquares.py  test_validation2DWaveSystemUpwindTriangles.py  test_validation3DEF.py  test_validation3DPoissonVF_checkerboard.py  test_validation3DPoissonVF_ns.py  test_validation3DPoissonVF_s.py  test_validation3DSphereEF.py  test_validation3DSpherePoissonEF.py  test_validation3DVF_checkerboard.py  test_validation3DVF_ns.py  test_validation3DWaveSystemCubesFV.py  test_validation3DWaveSystemTetrahedraFV.py  test_validation3DWaveSystemUpwindCubes.py  test_validation3DWaveSystemUpwindTetrahedra.py
validation/: CMakeLists.txt  test_validation2DEF.py  test_validation2DVF_checkerboard.py  test_validation2DVF_ns.py  test_validation2DVF_ns_loc_ref.py  test_validation2DVF_s.py  test_validation2DWaveSystemSquaresFV.py  test_validation2DWaveSystemTrianglesFV.py  test_validation3DEF.py  test_validation3DSphereEF.py  test_validation3DVF_checkerboard.py  test_validation3DVF_ns.py  test_validation3DVF_s.py  test_validationWaveSystem2DFV.py  validation.py  validation2DEF.py  validation2DVF.py  validation2DVF_ns.py  validation2DVF_ns_loc_ref.py  validation2DVF_s.py  validation3DEF.py  validation3DVF.py  validation3DVF_ns.py  validation3DVF_s.py
validation/Poisson2DEF/: FiniteElements2DWithCDMATH.py
validation/Poisson2DEF_ns/: CMakeLists.txt  FiniteElements2DWithCDMATH.py
validation/Poisson2DVF/: FiniteVolumes2DWithCDMATH.py
validation/Poisson3DEF/: FiniteElements3DWithCDMATH.py
validation/Poisson3DEF_ns/: CMakeLists.txt  FiniteElements3DWithCDMATH.py
validation/Poisson3DSphereEF/: FiniteElementsOnSphere.py
validation/Poisson3DVF/: FiniteVolumes3DWithCDMATH.py
validation/WaveSystem2DFV/: WaveSystem2DFV.py
(+1779 files in other folders)
