file(COPY VTK_routines.py DESTINATION ${CMAKE_BINARY_DIR})

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/analyticalFunction_discretizer.py DESTINATION bin/)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/VTK_routines.py DESTINATION bin/)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/MED_routines.py DESTINATION bin/)
INSTALL(FILES ${MED_LOADER_DIR}/swig/VTKReader.py DESTINATION bin/)
